[project]
name = "lora-easy-training-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lora-easy-training-scripts-backend",
    "pyside6>=6.9.1",
    "qt-material==2.14",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[tool.uv.sources]
lora-easy-training-scripts-backend = { path = "backend" }
